# anchor-stability

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  compress_cmds.sh  requirements.txt  run_analysis.sh  run_collect_results.sh  run_compress.sh  run_get_embs.sh  run_install.sh  run_models.sh  setup.py
anchor/: algorithms.py  demo.py  embedding.py  system.py  utils.py
embedding_algorithms/GloVe/: shuffle.sh
embedding_algorithms/GloVe/src/: glove.c
embedding_algorithms/GloVe/tests/: test_freeze.sh  test_load_pretrained.sh
embedding_algorithms/GloVe/tests/data/: pretrained.c.txt  pretrained.w.txt  vocab.txt
embedding_algorithms/Hazy/: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  clean.sh  local_build_env.sh  setup.py
embedding_algorithms/Hazy/conda.recipe/: meta.yaml
embedding_algorithms/Hazy/eval/intrinsic/: README.md  analogy_eval.py  download_data.sh  example_test.sh  ws_eval.py
embedding_algorithms/Hazy/eval/intrinsic/representations/: __init__.py  embedding.py  explicit.py  matrix_serializer.py  representation_factory.py
embedding_algorithms/Hazy/examples/: demo.py  demo.sh
embedding_algorithms/Hazy/examples/notebook/: pi_vs_gd_vs_sgd_vs_svrg.ipynb
embedding_algorithms/Hazy/hazy/: __init__.py
embedding_algorithms/Hazy/hazytensor/: CMakeLists.txt  bindings.cc  gen.py
embedding_algorithms/Hazy/hazytensor/apps/: embedding.cc  glove_cooccur.cc  glove_vocab_count.cc  ppmi.cc  procrustes.cc  sample.cc
embedding_algorithms/Hazy/hazytensor/bindings/: PyCOO.h  PyCSR.h  PyDenseMatrix.h  PyProcrustes.h  PySolver.h
embedding_algorithms/Hazy/hazytensor/cmake/: FindLLVM.cmake
embedding_algorithms/Hazy/hazytensor/src/datastructures/: COO.cc  COO.h  CSR.cc  CSR.h  DenseMatrix.cc  DenseMatrix.h  DenseVector.cc  DenseVector.h
embedding_algorithms/Hazy/hazytensor/src/glove/: cooccur.cc  cooccur.h  shuffle.cc  shuffle.h  vocab_count.cc  vocab_count.h
embedding_algorithms/Hazy/hazytensor/src/ops/: multiply.cc  multiply.h
embedding_algorithms/Hazy/hazytensor/src/solver/: common.cc  common.h  gd_solver.cc  hybird_solver.cc  pi_solver.cc  sgd_solver.cc  solver.cu  solver.h  svrg_solver.cc
embedding_algorithms/Hazy/hazytensor/src/utils/: parallel.cc  parallel.h  pthread_barrier.h  thread_pool.cc  thread_pool.h  timer.h  utils.cc  utils.h
embedding_algorithms/Hazy/tests/: test_coo_from_file.py  test_coo_sample.py  test_coo_shuffle_inplace.cc  test_coo_to_csr.py  test_hybrid.py  test_main.cc  test_pi.py  test_pre_trained.py  test_preprocess.py  test_procrustes.py  test_sgd.py  test_svrg.py  test_text8.py  utils.py
embedding_algorithms/Hazy/tests/data/: sample_data.txt  sample_data_1_vocab.txt  sample_data_vocab.txt
embedding_algorithms/word2vec/: word2vec.c
embedding_algorithms/word2vec/tests/: run_tests.sh  test_freeze.sh  test_load_pretrained.sh
embedding_algorithms/word2vec/tests/data/: pretrained.c.txt  pretrained.w.txt
notebooks/: demo_distance_measures.ipynb  plot_utils.py  stability-memory-tradeoff-figures-sst2.ipynb  stability-memory-tradeoff-figures.ipynb
results/: ft_sg_optimal_no_emb_norm_top_10000.csv  glove_optimal_no_emb_norm_top_10000.csv  mc_optimal_no_emb_norm_top_10000.csv  w2v_cbow_optimal_no_emb_norm_top_10000.csv
scripts/: README.md
scripts/analysis/: create_anchors.py  diff_to_oracle.py  dim_stability_analysis.py  eval_wiki_compressed.sh  eval_wiki_compressed_embs_baselines.sh  eval_wiki_compressed_embs_ei.sh  eval_wiki_compressed_embs_nn.sh  fit_trend.py  gather_results.py  get_correlation.py  selection_criterion.py  utils.py
scripts/embedding_generation/: compression_experiment_wiki.py  dimension_wiki.py  experiment.py  gen_compressed.py  get_hyperparam_results.py
scripts/model_training/: gen_model_cmds.py  train_downstream.py
tests/: test_embedding.py  utils.py
